--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     ],
 
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.*",
+        "php": "^7.1.3",
+        "symfony/framework-bundle": "^4.3",
         "swiftmailer/swiftmailer": "*",
         "stof/doctrine-extensions-bundle": "*",
         "a2lix/translation-form-bundle" : "*",
-        "twig/twig": "1.*"
+        "twig/twig": "^2.0",
+        "phpunit/phpunit": "8.*"
     },
 
     "require-dev": {
@@ -34,5 +35,5 @@
     },
 
     "target-dir": "Rj/EmailBundle",
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
