--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
 
     "require": {
-        "php": "^7.1.3",
-        "symfony/framework-bundle": "^4.3",
+        "php": "^8.0",
+        "symfony/framework-bundle": "^6.0",
         "swiftmailer/swiftmailer": "*",
         "stof/doctrine-extensions-bundle": "*",
         "a2lix/translation-form-bundle" : "*",
@@ -27,7 +27,7 @@
 
     "require-dev": {
         "doctrine/orm": "2.*",
-        "phpunit/phpunit": "9.*"
+        "phpunit/phpunit": "^9.0"
     },
 
     "autoload": {
