--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,12 @@
 
     "require-dev": {
         "doctrine/orm": "2.*",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^10.0"
     },
 
     "autoload": {
-        "psr-0": { "Rj\\EmailBundle": "" }
+        "psr-4": { "Rj\\EmailBundle\\": "" }
     },
 
-    "target-dir": "Rj/EmailBundle",
     "minimum-stability": "stable"
 }
