--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,9 @@
         "psr-4": { "Rj\\EmailBundle\\": "" }
     },
 
+    "autoload-dev": {
+        "psr-4": { "Rj\\EmailBundle\\": "" }
+    },
+
     "minimum-stability": "stable"
 }
