--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
 
     "autoload-dev": {
-        "psr-4": { "Rj\\EmailBundle\\": "" }
+        "psr-4": { "Rj\\EmailBundle\\Tests\\": "Tests/" }
     },
 
     "minimum-stability": "stable"
